# gdbus-demo

gdbus-cpp-demo/: CMakeLists.txt
gdbus-cpp-demo/client/: CMakeLists.txt  client.cpp
gdbus-cpp-demo/gdbus/: interface.xml
gdbus-cpp-demo/includes/: client.h  server.h
gdbus-cpp-demo/server/: CMakeLists.txt  server.cpp
gdbus-method-demo/: CMakeLists.txt
gdbus-method-demo/client/: client.c
gdbus-method-demo/gdbus/: interface.xml
gdbus-method-demo/server/: server.c
gdbus-mix-demo/: CMakeLists.txt
gdbus-mix-demo/client/: CMakeLists.txt  client.c
gdbus-mix-demo/gdbus/: CMakeLists.txt
gdbus-mix-demo/includes/: client.h
gdbus-mix-demo/server/: CMakeLists.txt  server.c
gdbus-multi-method-demo/: CMakeLists.txt
gdbus-multi-method-demo/client/: client.c
gdbus-multi-method-demo/gdbus/: interface.xml
gdbus-multi-method-demo/includes/: client.h  server.h
gdbus-multi-method-demo/server/: server.c
gdbus-multi-signal-demo/: CMakeLists.txt
gdbus-multi-signal-demo/client/: client.c
gdbus-multi-signal-demo/gdbus/: CMakeLists.txt  interface.xml
gdbus-multi-signal-demo/includes/: client.h  server.h
gdbus-multi-signal-demo/server/: server.c
gdbus-signal-demo/: CMakeLists.txt
gdbus-signal-demo/client/: CMakeLists.txt  client.c
gdbus-signal-demo/gdbus/: interface.xml
gdbus-signal-demo/includes/: client.h  server.h
gdbus-signal-demo/server/: CMakeLists.txt  server.c
